K1J-529: Replace the deprecated feature with the new inactive certificate type feature toggle